--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "external/pybind11"]
-	path = external/pybind11
+	path = extension/external/pybind11
 	url = https://github.com/pybind/pybind11
