--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,5 @@
 global-exclude test_*.py
 include README.md
-include AUTHORS.md
 
 # Include the files to be compiled into an extension
 include extension/*.cc
@@ -9,7 +8,8 @@ include extension/*.hh
 # Gather required data from adccore binary blob
 # (i.e. include files and compiled binary)
 include extension/adccore/adccore_config.json
-include extension/adccore/lib/libadccore.so.*
+include extension/adccore/lib/libadccore.so
+include extension/adccore/lib/libadccore.dylib
 recursive-include extension/adccore/include/adcc/ *.hh
 recursive-include extension/adccore/include/ctx/ *.hh
 
