--- a/setup.cfg
+++ b/setup.cfg
@@ -3,11 +3,9 @@ current_version = 0.6.0
 commit = True
 tag = True
 
-[bumpversion:file:CMakeLists.txt]
-
-[bumpversion:file:src/adcc/version.cc]
-
 [bumpversion:file:adcc/__init__.py]
+
+[bumpversion:file:setup.py]
 
 [flake8]
 ignore = E241,E266,W504
