--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -8,10 +8,7 @@ include extension/*.hh
 # Gather required data from adccore binary blob
 # (i.e. include files and compiled binary)
 include extension/adccore/adccore_config.json
-include extension/adccore/lib/libadccore.so
-include extension/adccore/lib/libadccore.dylib
 recursive-include extension/adccore/include/adcc/ *.hh
 recursive-include extension/adccore/include/ctx/ *.hh
-
-# Ignore the symlinked library to avoid duplication
-exclude adcc/lib/*
+include adcc/lib/libadccore.so
+include adcc/lib/libadccore.dylib
