Filter out some DeprecationWarning

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,4 +16,7 @@ test = pytest
 
 [tool:pytest]
 addopts = --verbose
-
+filterwarnings =
+    ignore:Using or importing the ABCs from:DeprecationWarning
+    ignore:np.asscalar\(a\) is deprecated:DeprecationWarning
+    ignore:time.clock has been deprecated:DeprecationWarning
