--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -8,6 +8,7 @@ include LICENSE*
 # Include the files to be compiled into an extension
 include extension/*.cc
 include extension/*.hh
+include extension/AdcCore.py
 
 # Gather required data from adccore binary blob
 # (i.e. include files and compiled binary)
