Make flake a bit more tolerant with line numbers

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,8 @@ tag = True
 [bumpversion:file:setup.py]
 
 [flake8]
-ignore = E241,E266,W503
+select = C,E,F,W,B,B950
+ignore = E241,E266,W503,E501
 max-line-length = 80
 
 [aliases]
