--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -17,6 +17,7 @@ recursive-include extension/adccore/include/adcc/ *.hh
 recursive-include extension/adccore/include/ctx/ *.hh
 include adcc/lib/libadccore.so
 include adcc/lib/libadccore.dylib
+include adcc/lib/libadccore.*.dylib
 include adcc/lib/libstdc++.so.*
 include adcc/lib/libc++.so.*
 include adcc/lib/libadccore_LICENSE
