Decoupling of adccore and adcc version

--- a/setup.cfg
+++ b/setup.cfg
@@ -21,4 +21,5 @@ filterwarnings =
 	ignore:Using or importing the ABCs from:DeprecationWarning
 	ignore:np.asscalar\(a\) is deprecated:DeprecationWarning
 	ignore:time.clock has been deprecated:DeprecationWarning
-
+norecursedirs= 
+	adcc/testdata/adcc-testdata
