--- a/setup.cfg
+++ b/setup.cfg
@@ -11,6 +11,8 @@ tag = True
 select = C,E,F,W,B,B950
 ignore = E241,E266,W503,E501
 max-line-length = 80
+per-file-ignores =
+	examples/water/data.py:E131,E126,E222,E121,E123
 
 [aliases]
 test = pytest
