Correct flake8 error

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,11 +8,12 @@ tag = True
 [bumpversion:file:setup.py]
 
 [flake8]
-select = C,E,F,W,B,B950
-ignore = E241,E266,W503,E501
-max-line-length = 80
+ignore = E241,E266,W503
+max-line-length = 82
 per-file-ignores =
-	examples/water/data.py:E131,E126,E222,E121,E123
+	examples/water/data.py:E131,E126,E222,E121,E123,E501
+	adccore/**:W,E,F
+	adcc/testdata/adcc-testdata/**:E501
 
 [aliases]
 test = pytest
