Ignore extra deprecation in pytest

--- a/setup.cfg
+++ b/setup.cfg
@@ -24,6 +24,6 @@ filterwarnings =
 	ignore:Using or importing the ABCs from:DeprecationWarning
 	ignore:np.asscalar\(a\) is deprecated:DeprecationWarning
 	ignore:time.clock has been deprecated:DeprecationWarning
+	ignore:invalid escape sequence:DeprecationWarning
 norecursedirs = 
 	adcc/testdata/adcc-testdata
-
