--- a/conda/meta.yaml.in
+++ b/conda/meta.yaml.in
@@ -32,11 +32,11 @@ requirements:
   run:
     - {{ pin_compatible('python', max_pin='x.x') }}
     - {{ pin_compatible('mkl', max_pin='x') }}
-    - {{ pin_compatible('h5py', max_pin='x.x.x') }}
     - {{ pin_compatible('numpy', max_pin='x.x') }}
-    - {{ pin_compatible('scipy', max_pin='x') }}
-    - {{ pin_compatible('matplotlib', max_pin='x') }}
-    - {{ pin_compatible('tqdm', max_pin='x') }}
+    - h5py >=2.9
+    - scipy >=1.2
+    - matplotlib >=3.0
+    - tqdm >=4.30
 
 test:
   imports:
