--- a/conda/meta.yaml.in
+++ b/conda/meta.yaml.in
@@ -25,7 +25,7 @@ requirements:
     # Testing:
     - pytest
     - pytest-cov
-    - pyscf
+    - pyscf    # [py37]
     # - psi4   # TODO Unfortunately installing psi4 here does not work.
     # Standard dependencies:
     - numpy >=1.14
