--- a/conda/meta.yaml.in
+++ b/conda/meta.yaml.in
@@ -36,7 +36,7 @@ requirements:
   run:
     - {{ pin_compatible('python', max_pin='x.x') }}
     - {{ pin_compatible('mkl', upper_bound='2021.0') }}
-    - {{ pin_compatible('numpy', max_pin='x.x') }}
+    # - {{ pin_compatible('numpy', max_pin='x.x') }}
     - h5py >=2.9
     - scipy >=1.2
     - matplotlib >=3.0
