--- a/conda/meta.yaml.in
+++ b/conda/meta.yaml.in
@@ -25,6 +25,7 @@ requirements:
     # Testing:
     - pytest
     - pytest-cov
+    - pyyaml
     # - psi4   # TODO Unfortunately installing psi4 here does not work.
     # - pyscf  # TODO Unfortunately pyscf neither
     # Standard dependencies:
@@ -36,7 +37,7 @@ requirements:
   run:
     - {{ pin_compatible('python', max_pin='x.x') }}
     - {{ pin_compatible('mkl', upper_bound='2021.0') }}
-    - {{ pin_compatible('numpy', max_pin='x.x') }}
+    - numpy >=1.14
     - h5py >=2.9
     - scipy >=1.2
     - matplotlib >=3.0
