Add opt_einsum dependency to conda

--- a/conda/meta.yaml.in
+++ b/conda/meta.yaml.in
@@ -34,6 +34,7 @@ requirements:
     - scipy >=1.2
     - matplotlib >=3.0
     - tqdm >=4.30
+    - opt_einsum >=3.0
   run:
     - {{ pin_compatible('python', max_pin='x.x') }}
     - {{ pin_compatible('mkl', upper_bound='2021.0') }}
@@ -42,6 +43,7 @@ requirements:
     - scipy >=1.2
     - matplotlib >=3.0
     - tqdm >=4.30
+    - opt_einsum >=3.0
 
 test:
   imports:
