--- a/conda/meta.yaml.in
+++ b/conda/meta.yaml.in
@@ -35,6 +35,7 @@ requirements:
     - matplotlib >=3.0
     - tqdm >=4.30
     - opt_einsum >=3.0
+    - pandas >=0.25.0
   run:
     - {{ pin_compatible('python', max_pin='x.x') }}
     - {{ pin_compatible('mkl', upper_bound='2021.0') }}
@@ -44,6 +45,7 @@ requirements:
     - matplotlib >=3.0
     - tqdm >=4.30
     - opt_einsum >=3.0
+    - pandas >=0.25.0
 
 test:
   imports:
