--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -13,7 +13,12 @@ jobs:
         with:
           python-version: '3.8'
       - name: Install dependencies
-        run: python -m pip install --user setuptools wheel
+        run: |
+          sudo apt-get install libopenblas-base
+          python -m pip install pyscf cppe
+          python -m pip install -r requirements.txt
+      - name: Run tests
+        run: python setup.py test
       - name: Build a source tarball
         run: python setup.py sdist
       - name: Publish distribution 📦 to Test PyPI
