--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -15,8 +15,8 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get install libopenblas-base
-          python -m pip install pyscf cppe
-          python -m pip install -r requirements.txt
+          python -m pip install --user pyscf cppe wheel
+          python -m pip install --user -r requirements.txt
       - name: Run tests
         run: python setup.py test
       - name: Build a source tarball
