--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -41,8 +41,8 @@ jobs:
         if: contains( matrix.os, 'ubuntu')
       - name: Install python dependencies
         run: |
-          python -m pip install pyscf cppe
-          python -m pip install -r requirements.txt
+          python -m pip install --user pyscf cppe wheel
+          python -m pip install --user -r requirements.txt
       - name: Run tests
         run: python setup.py test -a '--cov=adcc'
       - name: Upload coverage
