--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -49,6 +49,7 @@ jobs:
         run: |
           pip install coveralls
           coveralls
+        env: GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   #
   # Test source code formatting
   #
