--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -2,6 +2,7 @@ name: Publish package
 on:
   push:
     branches: [master]
+  tags:
   workflow_dispatch:
 
 jobs:
@@ -21,7 +22,7 @@ jobs:
         run: python setup.py test
       - name: Build a source tarball
         run: python setup.py sdist
-      - name: Publish distribution 📦 to Test PyPI
+      - name: Publish distribution 📦 to PyPI
         if: startsWith(github.ref, 'refs/tags')
         uses: pypa/gh-action-pypi-publish@master
         with:
