First go at Conda deployment

--- a/conda/conda_build_config.yaml
+++ b/conda/conda_build_config.yaml
@@ -12,17 +12,14 @@ CONDA_BUILD_SYSROOT:
     - /Users/runner/MacOSX10.9.sdk     # [osx]
 c_compiler_version:
     - 7.3.0                            # [linux]
-    - 4                                # [osx]
+    - 10                               # [osx]
 cxx_compiler_version:
     - 7.3.0                            # [linux]
-    - 4                                # [osx]
+    - 10                               # [osx]
 
 # <<< Other Stuff >>>
-blas_impl:
-    - mkl
-mkl:
-    - 2019.*
+# TODO: enable other versions
 python:
-    - 3.6
-    - 3.7
+    # - 3.6
+    # - 3.7
     - 3.8
