--- a/conda/meta.yaml.in
+++ b/conda/meta.yaml.in
@@ -5,22 +5,15 @@ package:
 source:
     path: ../
 
-build:
-  ignore_run_exports:
-    - mkl
-
 requirements:
   build:
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
     - python {{ python }}
-    - mkl-devel {{ mkl }}
-    - cmake >=3.2
-    - ninja
-    - ccache
+    - libtensorlight
   host:
     - python {{ python }}
-    - mkl-devel {{ mkl }}
+    - libtensorlight
     - pybind11 >=2.6
     # Testing:
     - pytest
@@ -38,7 +31,7 @@ requirements:
     - pandas >=0.25.0
   run:
     - {{ pin_compatible('python', max_pin='x.x') }}
-    - {{ pin_compatible('mkl', upper_bound='2021.0') }}
+    - libtensorlight
     - numpy >=1.14
     - h5py >=2.9
     - scipy >=1.2
@@ -52,12 +45,10 @@ test:
     - adcc
   requires:
     - pytest
-    - mkl {{ mkl }}
+    - libtensorlight
   commands:
     - export PYLIB_EXT=`$PYTHON -c 'import sysconfig as s; print(s.get_config_var("EXT_SUFFIX"))'`
     - test -f $PREFIX/lib/python{{ PY_VER }}/site-packages/libadcc$PYLIB_EXT
-    - test -f $PREFIX/lib/python{{ PY_VER }}/site-packages/adcc/lib/libadccore.so # [linux]
-    - test -f $PREFIX/lib/python{{ PY_VER }}/site-packages/adcc/lib/libadccore.dylib # [osx]
     # TODO Proper testing done during build for now.
 
 
