--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,9 +17,9 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - {version: '3.6', os: ubuntu-latest}
-          - {version: '3.8', os: ubuntu-latest}
-          - {version: '3.6', os: macOS-10.15  }
+          - {version: '3.6', os: ubuntu-latest, documentation: True}
+          - {version: '3.8', os: ubuntu-latest, documentation: False}
+          - {version: '3.6', os: macOS-10.15  , documentation: False}
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
@@ -38,10 +38,10 @@ jobs:
             ${{ runner.os }}-test-
             ${{ runner.os }}-
       - name: Install system dependencies on Linux
-        run: sudo apt-get install libopenblas-base ccache
+        run: sudo apt-get install libopenblas-base ccache doxygen
         if: contains( matrix.os, 'ubuntu')
       - name: Install system dependencies on macOS
-        run:  brew install ccache
+        run:  brew install ccache doxygen
         if: contains( matrix.os, 'macos')
       - name: Install python dependencies
         run: |
@@ -49,10 +49,25 @@ jobs:
           export PATH="/usr/lib/ccache:$PATH"
           python -m pip install --user pyscf cppe wheel
           python -m pip install --user -r requirements.txt -v
+      #
       - name: Run python tests
         run: python setup.py test -a '--cov=adcc'
       - name: Run C++ tests
         run: python setup.py cpptest -v
+      #
+      - name: Dependencies for documentation
+        run: python -m pip install --user .[build_docs]
+        if: matrix.documentation
+      - name: Build documentation
+        run: python setup.py build_docs
+        if: matrix.documentation
+      - name: Upload documentation artefact
+        uses: actions/upload-artifact@v2
+        with:
+          name: documentation
+          path: build/sphinx/html
+        if: matrix.documentation
+      #
       - name: Upload coverage to coveralls
         run: |
           pip install coveralls
