--- a/.github/workflows/deploy_conda.yaml
+++ b/.github/workflows/deploy_conda.yaml
@@ -1,7 +1,7 @@
 name: Conda Deployment
 on:
   push:
-    branches: [master, opensource]
+    branches: [master]
     tags: ['v*']
   workflow_dispatch:
 
