--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -38,11 +38,16 @@ jobs:
             ${{ runner.os }}-test-
             ${{ runner.os }}-
       - name: Install system dependencies on Linux
-        run: sudo apt-get install libopenblas-base ccache doxygen
+        run: sudo apt-get install libopenblas-base ccache doxygen lcov
         if: contains( matrix.os, 'ubuntu')
       - name: Install system dependencies on macOS
-        run:  brew install ccache doxygen
+        run:  brew install ccache doxygen lcov
         if: contains( matrix.os, 'macos')
+      #
+      - name: Dump siteconfig with coverage flags for C++
+        run: |
+          mkdir $HOME/.adcc/
+          echo 'coverage = True' > $HOME/.adcc/siteconfig.py
       - name: Install python dependencies
         run: |
           export PATH="/usr/local/opt/ccache/libexec:$PATH"
@@ -68,14 +73,24 @@ jobs:
           path: build/sphinx/html
         if: matrix.documentation
       #
+      - name: Upload coverage to codecov
+        run: |
+          pip install codecov
+          codecov -X gcov
+          lcov --directory . --capture --output-file coverage.info
+          lcov --remove coverage.info '/opt/*' '/Applications/*' '/Library/*'  '/usr/*' "${HOME}"'/.cache/*' "${HOME}"'/.local/*' "${PWD}"'/build/*' --output-file coverage.info
+          lcov --list coverage.info
+          codecov -X gcov -f coverage.info
+
       - name: Upload coverage to coveralls
+        # Note: Needs to be after the above step, because it parses the coverage.info
         run: |
           pip install coveralls
-          coveralls
+          sudo gem install coveralls-lcov
+          coveralls-lcov -v -n coverage.info > coverage.json
+          coveralls --merge=coverage.json
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Upload coverage to codecov
-        uses: codecov/codecov-action@v1
   #
   # Test source code formatting
   #
