--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -55,8 +55,10 @@ jobs:
           python -m pip install --user pyscf cppe wheel
           python -m pip install --user -r requirements.txt -v
       #
-      - name: Run python tests
+      - name: Run python tests with std allocator
         run: python setup.py test -a '--cov=adcc'
+      - name: Run reduced python tests with libxm
+        run: python setup.py test -a '--allocator=libxm -k "TestFunctionality and h2o_sto3g"'
       - name: Run C++ tests
         run: python setup.py cpptest -v
       #
