fix amplitude vector and coveralls

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -88,7 +88,7 @@ jobs:
           pip install coveralls
           sudo gem install coveralls-lcov
           coveralls-lcov -v -n coverage.info > coverage.json
-          coveralls --merge=coverage.json
+          coveralls --service=github --merge=coverage.json
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   #
