composable AdcExtraTerm stuff
refactor AdcExtraTerm and EnergyCorrection

cleanup and improve coverage

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -119,5 +119,5 @@ jobs:
       - name: Checking C++ files with clang-format
         working-directory: libadcc
         run: |
-          find . -type f \( -name '*.cc' -o -name '*.hh' \) -print0 | xargs -r0 clang-format --style=file -i
+          find . -type f \( -name '*.cc' -o -name '*.hh' \) -print0 | xargs -r0 clang-format -i
           git diff --exit-code
