--- a/adcc/testdata/psi4_dump.yml
+++ b/adcc/testdata/psi4_dump.yml
@@ -3,14 +3,16 @@ formaldehyde_sto-3g_pcm_adc1:
   method: adc1
   molecule: formaldehyde
   energy_scf: -112.35458302984613
-  lr_excitation_energy: [0.16467, 0.3609, 0.46549, 0.50874, 0.69386]
-  lr_osc_strength: [0.0, 0.0107, 0.3434, 0.0, 0.3586]
-  ptlr_adcc_excitation_energy: [0.16468, 0.36093, 0.46758, 0.50874, 0.69447]
+  lr_excitation_energy: [0.164670987, 0.360903879, 0.465492571, 0.50874055, 0.693857844]
+  lr_osc_strength: [0.0, 0.01075, 0.34344, 0.0, 0.35858]
+  ptlr_adcc_excitation_energy: [0.164676366, 0.360930626, 0.467575499, 0.508742077,
+    0.694474733]
 formaldehyde_cc-pvdz_pcm_adc1:
   basis: cc-pvdz
   method: adc1
   molecule: formaldehyde
   energy_scf: -113.88427067069416
-  lr_excitation_energy: [0.179, 0.38177, 0.38802, 0.39216, 0.43544]
-  lr_osc_strength: [0.0, 0.0001, 0.2487, 0.2349, 0.0]
-  ptlr_adcc_excitation_energy: [0.17902, 0.38185, 0.38958, 0.39259, 0.43546]
+  lr_excitation_energy: [0.178995043, 0.38176984, 0.388019451, 0.392159876, 0.435439339]
+  lr_osc_strength: [0.0, 7.0e-05, 0.24871, 0.23489, 0.0]
+  ptlr_adcc_excitation_energy: [0.179023803, 0.381851509, 0.389582948, 0.392594025,
+    0.435463213]
