some min versions

--- a/conda/environment_dev_linux.yml
+++ b/conda/environment_dev_linux.yml
@@ -3,22 +3,20 @@ channels:
   - conda-forge
 dependencies:
   # Build
-  - mkl
-  - mkl-devel
   - python
   - gcc_linux-64 =9.4
   - gxx_linux-64 =9.4
-  - libtensorlight
-  - pybind11
+  - libtensorlight >=3.0.1
+  - pybind11 >=2.6
   # Run
-  - numpy
-  - scipy
-  - tqdm
-  - h5py
-  - opt_einsum
+  - numpy >=1.14
+  - scipy >=1.2
+  - tqdm >=4.30
+  - h5py >=2.9
+  - opt_einsum >=3.0
   # Tests
-  - pandas
-  - cppe
+  - pandas >=0.25.0
+  - cppe >=0.3.1
   - pytest
   - pytest-cov
   - pyyaml
