--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -123,6 +123,9 @@ jobs:
         with:
           activate-environment: adcc-dev
           environment-file: conda/environment_dev_linux.yml
+          miniforge-variant: Mambaforge
+          use-mamba: true
+          miniforge-version: latest
           python-version: ${{ matrix.version }}
           auto-activate-base: false
       - name: Dump siteconfig with coverage flags for C++
@@ -134,27 +137,27 @@ jobs:
           conda info
           conda list
           # python -c "import psi4"
-          python setup.py test -a '--cov=adcc'
+          python setup.py test # -a '--cov=adcc'
           python setup.py cpptest -v
       #
-      - name: Upload coverage to codecov
-        run: |
-          pip install codecov
-          codecov -X gcov
-          lcov --directory . --capture --output-file coverage.info
-          lcov --remove coverage.info '/opt/*' '/Applications/*' '/Library/*' '/usr/*' "${HOME}"'/.cache/*' "${HOME}"'/.local/*' "${PWD}"'/build/*' "${PWD}"'/libadcc/tests/*' --output-file coverage.info
-          lcov --list coverage.info
-          codecov -X gcov -f coverage.info
+      # - name: Upload coverage to codecov
+      #   run: |
+      #     pip install codecov
+      #     codecov -X gcov
+      #     lcov --directory . --capture --output-file coverage.info
+      #     lcov --remove coverage.info '/opt/*' '/Applications/*' '/Library/*' '/usr/*' "${HOME}"'/.cache/*' "${HOME}"'/.local/*' "${PWD}"'/build/*' "${PWD}"'/libadcc/tests/*' --output-file coverage.info
+      #     lcov --list coverage.info
+      #     codecov -X gcov -f coverage.info
       #
-      - name: Upload coverage to coveralls
-        # Note: Needs to be after the above step, because it parses the coverage.info
-        run: |
-          pip install coveralls
-          sudo gem install coveralls-lcov
-          coveralls-lcov -v -n coverage.info > coverage.json
-          coveralls --service=github --merge=coverage.json
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # - name: Upload coverage to coveralls
+      #   # Note: Needs to be after the above step, because it parses the coverage.info
+      #   run: |
+      #     pip install coveralls
+      #     sudo gem install coveralls-lcov
+      #     coveralls-lcov -v -n coverage.info > coverage.json
+      #     coveralls --service=github --merge=coverage.json
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   #
   # Test source code formatting
