--- a/conda/environment_dev_linux.yml
+++ b/conda/environment_dev_linux.yml
@@ -8,6 +8,7 @@ dependencies:
   - gxx_linux-64 >=12
   - libtensorlight =3.0.1=h3cb4726_2
   - pybind11 >=2.6
+  - pip
   # Run
   - numpy >=1.14
   - scipy >=1.2
