--- a/conda/environment_dev_linux.yml
+++ b/conda/environment_dev_linux.yml
@@ -4,10 +4,11 @@ channels:
 dependencies:
   # Build
   - python
-  - gcc_linux-64 =9.4
-  - gxx_linux-64 =9.4
-  - libtensorlight =3.0.1=hc894906_1
+  - gcc_linux-64 >=12
+  - gxx_linux-64 >=12
+  - libtensorlight =3.0.1=h3cb4726_2
   - pybind11 >=2.6
+  - pip
   # Run
   - numpy >=1.14
   - scipy >=1.2
