--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -132,11 +132,17 @@ jobs:
       #   run: |
       #     mkdir $HOME/.adcc/
       #     echo 'coverage = True' > $HOME/.adcc/siteconfig.py
+      - name: Install Psi4 from c-f
+        run: |
+          mamba install psi4 -c conda-forge -c conda-forge/label/libint_dev
+          conda list
+          psi4 --version
+          python -c "import psi4"
+          psi4 --test
       - name: Build and test adcc
         run: |
           conda info
           conda list
-          # python -c "import psi4"
           python setup.py test
           python setup.py cpptest -v
       #
