--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -132,13 +132,11 @@ jobs:
       #   run: |
       #     mkdir $HOME/.adcc/
       #     echo 'coverage = True' > $HOME/.adcc/siteconfig.py
-      - name: Install Psi4 from c-f
+      - name: Install Psi4 from c-f and pcmsolver
         run: |
-          mamba install psi4 -c conda-forge -c conda-forge/label/libint_dev
-          conda list
+          mamba install psi4 psi4::pcmsolver -c conda-forge -c conda-forge/label/libint_dev
           psi4 --version
           python -c "import psi4"
-          psi4 --test
       - name: Build and test adcc
         run: |
           conda info
