--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -73,18 +73,20 @@ jobs:
       - name: Run C++ tests
         run: python setup.py cpptest -v
       #
-      - name: Dependencies for documentation
-        run: python -m pip install --user .[build_docs]
-        if: matrix.documentation
-      - name: Build documentation
-        run: python setup.py build_docs
-        if: matrix.documentation
-      - name: Upload documentation artefact
-        uses: actions/upload-artifact@v2
-        with:
-          name: documentation
-          path: build/sphinx/html
-        if: matrix.documentation
+      # TODO: sphinx.setup_command does not exist anymore,
+      # need to build docs differently
+      # - name: Dependencies for documentation
+      #   run: python -m pip install --user .[build_docs]
+      #   if: matrix.documentation
+      # - name: Build documentation
+      #   run: python setup.py build_docs
+      #   if: matrix.documentation
+      # - name: Upload documentation artefact
+      #   uses: actions/upload-artifact@v2
+      #   with:
+      #     name: documentation
+      #     path: build/sphinx/html
+      #   if: matrix.documentation
       #
       - name: Upload coverage to codecov
         run: |
